--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "base16-tomorrow-dark-theme",
+  "name": "base16-darker-high-contrast-theme",
   "theme": "syntax",
   "version": "1.1.0",
-  "description": "Base16 dark theme for Atom",
+  "description": "High contrast dark theme based on base16-tomorrow-dark",
   "keywords": [
     "base16",
     "dark",
-    "syntax"
+    "syntax",
+    "contrast"
   ],
-  "repository": "https://github.com/atom/base16-tomorrow-dark-theme",
+  "repository": "https://github.com/jntesteves/base16-darker-high-contrast-theme",
   "license": "MIT",
   "engines": {
     "atom": ">0.49.0"
