--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "base16-darker-high-contrast-syntax",
   "theme": "syntax",
-  "version": "1.5.0",
+  "version": "1.5.1-0",
   "description": "High contrast dark theme based on base16-tomorrow-dark",
   "keywords": [
     "base16",
